# oe-java

./: .clangd  .devcontainer.env  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  settings.gradle.kts
.devcontainer/: .devcontainer.json  Dockerfile  devcontainer-entrypoint.sh
.devcontainer/services/: nvim.service
app/: build.gradle.kts
app/src/main/java/org/oejava/example/: App.java
app/src/main/java/org/oejava/oe/: ExampleEnclave.java
app/src/test/java/org/oejava/example/: AppTest.java
cmake/: OEEnclave.cmake
enclaves/example/: CMakeLists.txt  example.edl  example_impl.cpp
host/: CMakeLists.txt  host.cpp  jni_bridge.cpp  ocalls_host.cpp
scripts/: check_sgx.sh  devcontainer-attach.sh  devcontainer-build.sh  devcontainer-down.sh  devcontainer-ssh-info.sh  devcontainer-up.sh
